@@ -1,0 +1,2 @@
+Site URL: https://pornez.net/
+DMCA: https://pornez.net/dmca/
